# truant

./: Cargo.toml  LICENCE  README.md
.github/workflows/: ci.yml
benches/: rewrite_bench.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: fuzz_elf_parse.rs  fuzz_macho_parse.rs  fuzz_pe_disasm.rs  fuzz_pe_parse.rs
include/: truant_regctx.h
src/: binary_patch.rs  detect.rs  disasm.rs  elf.rs  error.rs  fat.rs  hook_preload.rs  hook_trampoline.rs  hooks.rs  lib.rs  macho.rs  macho_disasm.rs  macho_trampoline.rs  main.rs  patcher.rs  pe.rs  pe_disasm.rs  preload.rs  sidecar_preload.rs  trampoline.rs
src/arch/: mod.rs
src/arch/aarch64/: asm.rs  disasm.rs  hook_trampoline.rs  mod.rs  relocation.rs  trampoline_gen.rs
src/arch/x86_64/: disasm.rs  mod.rs  trampoline_gen.rs
src/elf_impl/: context.rs  mod.rs  patcher.rs
src/macho_impl/: context.rs  mod.rs  patcher.rs
src/pe_impl/: code_builder.rs  context.rs  mod.rs  patcher.rs
src/traits/: binary_context.rs  disassembler.rs  mod.rs  patcher.rs  trampoline_gen.rs
tests/: corpus_e2e.rs  feature_parity.rs  hook_e2e.rs  hook_unit.rs  pe_e2e.rs  shellcode.rs
tests/common/: mod.rs
